--- a/BookTracking-CBTIS75/BookTracking/views/admin_libros.pug
+++ b/BookTracking-CBTIS75/BookTracking/views/admin_libros.pug
@@ -2,12 +2,12 @@ extends layout
 
 block content
 
-  .row
+  .row#gbt
     .col
       .btn-group(role='group' aria-label='Navs')
         a.btn.btn-primary#pg(type='button' href='/administrar') General   
           i.bi.bi-caret-right
-        button.btn.btn-primary#pg(type='button' disabled) Libros   
+        button.btn.btn-primary#pgf(type='button' disabled) Libros   
   .container-fluid.botonera
     .row.hijo 
       .col
