--- a/BookTracking-CBTIS75/BookTracking/views/admin_registrar_usuario.pug
+++ b/BookTracking-CBTIS75/BookTracking/views/admin_registrar_usuario.pug
@@ -63,13 +63,16 @@ block content
                         input#correo1.form-control(type='email' name='correo1' required='')
                         label.form-label(for='correo1') Correo 1:
                     .col
+                      .form-floating.mb-3
                         input#correo2.form-control(type='email' name='correo2')
                         label.form-label(for='correo2') Correo 2:
                   .row
                     .col
+                      .form-floating.mb-3
                         input#lada.form-control(type='number' name='lada' required='')
                         label.form-label(for='lada') Lada:
                     .col
+                      .form-floating.mb-3
                         input#c.form-control(type='number' name='telefonoFijo1')
                         label.form-label(for='telefonoFijo1') Telefono fijo 1:
                   .form-floating.mb-3
