--- a/BookTracking-CBTIS75/BookTracking/views/admin_solicitudes.pug
+++ b/BookTracking-CBTIS75/BookTracking/views/admin_solicitudes.pug
@@ -1,12 +1,12 @@
 extends layout
 
 block content
-  .row
+  .row#gbt
     .col
       .btn-group(role='group' aria-label='Navs')
         a.btn.btn-primary#pg(type='button' href='/administrar') General   
           i.bi.bi-caret-right
-        button.btn.btn-primary#pg(type='button' disabled) Solicitudes   
+        button.btn.btn-primary#pgf(type='button' disabled) Solicitudes   
   .container-fluid
     .row
       .col
