--- a/BookTracking-CBTIS75/BookTracking/views/alumnos_buscar_solicitar_libro.pug
+++ b/BookTracking-CBTIS75/BookTracking/views/alumnos_buscar_solicitar_libro.pug
@@ -1,12 +1,12 @@
 extends layout
 
 block content
-  .row
+  .row#gbt
     .col
       .btn-group(role='group' aria-label='Navs')
         a.btn.btn-primary#pg(type='button' href='/alumnos') Inicio   
           i.bi.bi-caret-right
-        button.btn.btn-primary#pg(type='button' disabled) Buscar y solicitar libro   
+        button.btn.btn-primary#pgf(type='button' disabled) Buscar y solicitar libro   
   .container-fluid
     .row
       .col
